--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 * {
-    /*border: 1px solid red; */
+    border: 1px solid red;
     box-sizing: border-box;
     margin: 0;
     font-family: Roboto, Helvetica, serif;
@@ -104,4 +104,29 @@
     color: #1f2937;
     font-weight: 900;
     padding: 48px;
+    margin-bottom: 15px;
+}
+
+.image-container {
+    height: 300px;
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    align-content: center;
+}
+
+.content {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    gap: 3.5em;
+}
+
+.box {
+    width: 180px;
+    height: 180px;
+    border-radius: 10px;
+    border: 4px solid #3882F6;
 }
