--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 * {
-    /* border: 1px solid red; */
+    border: 1px solid red;
     box-sizing: border-box;
     margin: 0;
     font-family: Roboto, Helvetica, serif;
@@ -137,3 +137,36 @@
     font-size: 17.5px;
     text-align: center;
 }
+
+.third {
+    height: 420px;
+    width: 100%;
+    background-color: #e5e7eb;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.third .main-section,
+.third .author {
+    font-size: 36px;
+    color: #1F2937;
+}
+
+.third .main-section {
+    font-weight: 280;
+    width: 815px;
+    margin-top: 55px;
+    padding-left: 30px;
+}
+
+.third .author {
+    text-align: right;
+    font-size: 24px;
+    font-weight: 600;
+    width: 770px;
+    margin-top: -8px;
+    
+}
+
