--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 * {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     box-sizing: border-box;
     margin: 0;
     font-family: Roboto, Helvetica, serif;
@@ -170,3 +170,67 @@
     
 }
 
+.newsletter {
+    background-color: white;
+    height: 350px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.blue-container {
+    width: 1020px;
+    height: 150px;
+    background-color: #3882f6;
+    border-radius: 8px;
+    border: 2px solid #3882f6;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 120px;
+}
+
+.pitchforks {
+    color: white;
+    display: flex;
+    flex-direction: column;
+}
+
+.pitchforks :first-child {
+    font-weight: bold;
+    font-size: 24px;
+}
+
+.pitchforks :nth-child(2) {
+    font-weight: 280;
+    font-size: 18px;
+}
+
+.blue-container button {
+    background-color:#3882f6;
+    color: white;
+    border-radius: 7px;
+    border: 2px solid white;
+    font-size: 18px;
+    font-weight: 600;
+    padding: 5px 32px;
+
+}
+
+.footer {
+    background-color: #1F2937;
+    height: 100px;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer p {
+    color: white;
+    text-align: center;
+    font-weight: 600px;
+    font-size: 18px;
+    padding-left: 40px;
+}
